Website grand opening.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,54 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <meta name="description" content="The homepage of Chex&#8482; Quest 3."/>
-<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,Odamex,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch"/>
-<title>Chex&#8482; Quest 3</title>
+<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch"/>
+<title>Chex&#8482; Quest 3 | Home</title>
 </head>
 <body>
-<img alt="Chex&#8482; Quest 3" border="0" class="logo" src="images/logo.png"/>
-<table class="footer"><tr><td class="icon"><a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"/></a></td><td class="icon"><a href="http://english-1511321456.spampoison.com"><img alt="email" src="images/sticker.gif"/></a><br/><a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="images/sticker.gif" style="margin-top:1px"/></a></td></tr></table>
+<div class="fixedwidth">
+<div class="bar1">
+</div>
+<div class="div0">
+<img alt="Chex&#8482; Quest 3" class="mdoom" src="images/M_DOOM.png"/>
+<br/>
+<a class="button1" href="./">home</a>
+<br/>
+<a class="button0" href="downloads/">downloads</a>
+<br/>
+<a class="button0" href="mods/">mods</a>
+<br/>
+<a class="button0" href="links/">links</a>
+<br/>
+<a class="button0" href="about/">about</a>
+<br/>
+<a class="button0" href="contact/">contact</a>
+<div class="floatright">
+<div class="bar2">
+</div>
+</div>
+</div>
+<div class="floatright">
+<div class="bar3">
+</div>
+</div>
+<div class="div1">
+<div class="logocontain"><div class="logo1"><div class="logo2"><img alt="Chex&#8482; Quest 3" class="logo" src="images/logo.png"/><!--<p class="title">Looking to get into the action and grab Chex&#8482; Quest 3 v2 right away? <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">Click here</a>!</p>--></div></div></div>
+<div class="clear"></div>
+<div class="main">
+<p class="title">Home</p>
+<p class="paragraph0">Welcome to the homepage for Chex&#8482; Quest 3 and its engine, Chex&#8482; 3 GZD! Here you can find relevant links, downloads, and even featured game mods like competitive multiplayer add-on levels. Check below for the latest news and updates.</p>
+</div>
+<div class="main">
+<p class="paragraph0">THU, JAN 7, 2021</p>
+<p class="paragraph0">www.chexquest3.com is now live with its first post! This is to announce the pending release of Chex Quest 3 v2, which includes extra features like original CD movie playback, dynamic lights, several bug fixes, and other updates. Details can be found in the <a href="downloads/">Downloads</a> section.</p>
+<p class="paragraph0">We are currently in the process of getting the initial announcement out, as well as scheduling an online multiplayer test session for fans of Chex Quest or anyone else interested. Once that is done and ready, a pre-release download will be made available. So stay tuned!</p>
+</div>
+<div class="floatright"><a class="button0" onclick="topFunction()">back to top</a></div><div class="icons"><a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"/></a><div class="poison"><a href="http://english-1511321456.spampoison.com"><img alt="email" src="images/sticker.gif"/></a><br/><a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="images/sticker.gif"/></a></div></div>
+<script src="backtotop.js"></script>
+<div class="clear"></div>
+</div>
+</div>
 </body>
 </html>
