--- a/downloads/index.html
+++ b/downloads/index.html
@@ -51,7 +51,7 @@
 <p class="paragraph0"><span style="color:#CC0033;text-shadow:-1px 1px 0#000000,1px 1px 0#000000,1px -1px 0#000000,-1px -1px 0#000000">CHEX&#8482;</span> <span style="color:#7373FF;text-shadow:-1px 1px 0#000000,1px 1px 0#000000,1px -1px 0#000000,-1px -1px 0#000000">QUEST</span> <span style="color:#EDA6DA;text-shadow:-1px 1px 0#000000,1px 1px 0#000000,1px -1px 0#000000,-1px -1px 0#000000">3</span> <span style="color:#3F7D39;text-shadow:-1px 1px 0#000000,1px 1px 0#000000,1px -1px 0#000000,-1px -1px 0#000000">V2</span> (PRIMARY RECOMMENDED DOWNLOAD!)</p>
 <p class="paragraph0">After 12 years, we're pleased to announce that there is finally a version 2 of Chex&#8482; Quest 3! This new, major update includes many new features and upgrades, including:</p>
 <ul>
-<li>Chex Quest movie playback (intro and ending for E1, Rescue on Bazoik)</li>
+<li>Chex Quest movie playback (intro and ending for E1, Rescue on Bazoik&#8212;including a special version for older PCs!)</li>
 <li>Original MENU.EXE Help summoned from F1 (welcome back, 1996!)</li>
 <li>New dynamic lights (that can be toggled on/off with a new 'welcome window')</li>
 <li>New brightmaps (a sprite's bright state applied to select regions)</li>
