--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 <p class="paragraph0">Welcome to the homepage for Chex&#8482; Quest 3 and its engine, Chex&#8482; 3 GZD! Here you can find relevant links, downloads, and even featured game mods like competitive multiplayer add-on levels. Check below for the latest news and updates.</p>
 </div>
 <div class="main">
+<p class="paragraph0">THU, JUN 22, 2023</p>
+<p class="paragraph0">A date for the public test can now be announced! Saturday, June 24, 2023 at 8:00 PM EDT, a test intended for the Chex Quest fan community will be conducted. It will be performed on the Zandronum source port. For more information on how to use it, <a href="about/#Multiplayer_Support">visit here</a>. You will be looking for a server with a name like, "&lt;[IFOC]&gt; Chex Quest 3 v2.0 Test". The IWAD will be "chex3gzd-rc4.ipk3".</p>
+<p class="paragraph0">The reasons for this test are for the Chex Quest fan community to experience the changes and new features, offer input, make suggestions, and find and report on any bugs. Fan input will be invaluable in determining where to go forward with Chex Quest 3 v2.0.</p>
+<p class="paragraph0">The pre-release test WADs needed to play will be made available at the start of the test. Configured correctly, Doomseeker, IDE, or your server browser of choice should automatically know where to look to find the WADs. They will also be made available here soon thereafter.</p>
+</div>
+<div class="main">
 <p class="paragraph0">TUE, JUN 6, 2023</p>
 <p class="paragraph0">www.chexquest3.com is now live with its first post! This is to announce the pending release of Chex Quest 3 v2, which includes extra features like original CD movie playback, dynamic lights, several bug fixes, and other updates. Details can be found in the <a href="downloads/">Downloads</a> section.</p>
 <p class="paragraph0">We are currently in the process of getting the initial announcement out, as well as scheduling an online multiplayer test session for fans of Chex Quest or anyone else interested. Once that is done and ready, a pre-release download will be made available. So stay tuned!</p>
