--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div class="main">
 <p class="paragraph0">THU, JUN 22, 2023</p>
-<p class="paragraph0">A date for the public test can now be announced! Saturday, June 24, 2023 at 8:00 PM EDT, a test intended for the Chex Quest fan community will be conducted. It will be performed on the Zandronum source port. For more information on how to use it, <a href="about/#Multiplayer_Support">visit here</a>. You will be looking for a server with a name like, "&lt;[IFOC]&gt; Chex Quest 3 v2.0 Test". The IWAD will be "chex3gzd-rc4.ipk3".</p>
+<p class="paragraph0">A date for the public test can now be announced! Saturday, June 24, 2023 at 8:00 PM EDT, a test intended for the Chex Quest fan community will be conducted. It will be performed on the Zandronum source port. For more information on how to use it, <a href="about/#Multiplayer_Support">visit here</a>. You will be looking for a server with a name like, "&lt;[IFOC] Server&gt; Chex Quest 3 v2.0 Test". The IWAD will be "chex3gzd-rc4.ipk3".</p>
 <p class="paragraph0">The reasons for this test are for the Chex Quest fan community to experience the changes and new features, offer input, make suggestions, and find and report on any bugs. Fan input will be invaluable in determining where to go forward with Chex Quest 3 v2.0.</p>
 <p class="paragraph0">The pre-release test WADs needed to play will be made available at the start of the test. Configured correctly, Doomseeker, IDE, or your server browser of choice should automatically know where to look to find the WADs. They will also be made available here soon thereafter.</p>
 </div>
