Fix tooltip; add info on Odx test.

--- a/about/index.html
+++ b/about/index.html
@@ -1,90 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<meta name="description" content="The homepage of Chex&#8482; Quest 3."/>
-<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch"/>
-<title>Chex&#8482; Quest 3 | About</title>
+<link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="../stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta name="description" content="The homepage of Chex&trade; Quest 3.">
+<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch">
+<title>Chex&trade; Quest 3 | About</title>
 </head>
 <body>
 <div class="fixedwidth">
-<div class="bar1">
-</div>
-<div class="div0">
-<img alt="Chex&#8482; Quest 3" class="mdoom" src="../images/M_DOOM.png"/>
-<br/>
-<a class="button0" href="../">home</a>
-<br/>
-<a class="button0" href="../downloads/">downloads</a>
-<br/>
-<a class="button0" href="../mods/">mods</a>
-<br/>
-<a class="button0" href="../links/">links</a>
-<br/>
-<a class="button1" href="./">about</a>
-<br/>
-<a class="button0" href="../contact/">contact</a>
-<div class="floatright">
-<div class="bar2">
-</div>
-</div>
-</div>
-<div class="floatright">
-<div class="bar3">
-</div>
-</div>
-<div class="div1">
-<div class="main">
-<p class="paragraph0">
-<a href="#If_chex3gzd.exe_doesnt_work...">IF chex3gzd.exe DOESN'T WORK...</a>,
-<a href="#Multiplayer_Support">MULTIPLAYER SUPPORT</a>,
-<a href="#Trademark">TRADEMARK</a>
-</p>
-</div>
-<div class="main">
-<p class="title">About</p>
-<p class="paragraph0">Chex&#8482; Quest 3 is a classically-designed, fast-paced first person shooter (FPS) in the vein of popular ones from the 1990s. What sets it apart from the rest, though, is that it's totally non-violent. There's no blood, since the enemies are slime monsters called Flemoids, and they're "teleported" to another dimension rather than killed. Players do this using "zorchers" that look like remote controls rather than rifles &#8212; a true action-packed FPS for the whole family.</p>
-<p class="paragraph0">After originally releasing with five levels in 1996 and getting five more levels a short while later in 1997, Chex&#8482; Quest 3 was released in 2008, adding five more levels for a three-episode set. Now we're presenting the same game you know and love, but in a new package with new features, bug fixes, improvements galore, and new surprises in nearly every level! And, of course, CD movie playback!</p>
-<p class="paragraph0">The original 1996 games were made by Digital Caf&#233;, including Charles Jacobi, lead game artist (see <span class="tooltip">here<span class="tooltiptext"><span style="font-weight:700">Digital Caf&#233;</span><br/><br/>Dean Lincoln Hyers, Michael Koenigs, Mary Bregi, Charles Jacobi, Josh Storms, David Brus, Scott Holman, Joel Koenigs, Andrew Benson<br/><br/><span style="font-weight:700">Waters Molitor</span><br/><br/>Todd Waters, Tom Gunderson<br/><br/><span style="font-weight:700">Virtual Communications</span><br/><br/>Dan Snyder, Lee Snyder</span></span> for a more complete list of credits). The 2008 sequel was made by Charles Jacobi with select fan input. The 2023 Chex&#8482; Quest 3 v2.0 features and bug update, along with the ODAMEX and ZDaemon port, was performed by "Acts 19 quiz", one of the developers of Chex Quest HD and designer of this website. This CQ3 update was done as interest in an updated game that included cinematic playback was officially considered; and the opportunity was taken to fix a number of bugs, make several improvements, and add more features at the same time.</p>
-<p class="paragraph0">The movie playback of the XP/32-bit branch (chex3gzd-xp) was done with the assistance of Erick194 and Gerardo194 of Team [GEC].</p>
-</div>
-<div class="main">
-<p class="paragraph0"><a id="If_chex3gzd.exe_doesnt_work...">IF chex3gzd.exe DOESN'T WORK...</a></p>
-<p class="paragraph0">If chex3gzd.exe doesn't work on your computer, don't worry! There is a special branch designed specifically for older PCs, including Windows XP, 32-bit PCs, and if you're handy with compiling from souce, even older Linux and Macintosh! The chex3gzd-xp branch will be available along with the primary version upon initial release.</p>
-<p class="paragraph0">For help compiling Chex 3 GZD from source, please visit the <a href="https://zdoom.org/wiki/">ZDoom wiki</a> and see the "Programmer's Corner" on the bottom-right corner of the page to build for your platform.</p>
-<p class="paragraph0">If that doesn't work, you can still use chex3gzd.ipk3 with another engine. Compatible engines include (and aren't limited to):</p>
-<ul>
-<li>original <a href="https://zdoom.org/files/zdoom/">ZDoom</a> (as old as 2.7.0)</li>
-<li><a href="https://github.com/drfrag666/gzdoom/releases/tag/3.88b">LZDoom</a> (3.88b required)</li>
-<li><a href="https://zdoom.org/files/gzdoom/bin/">GZDoom</a>, older (as old as 1.7.0, though g2.3.0-2.4.0 provide the best legacy version experience; any after g3.1.0 but before g4.8.0 are incompatible)</li>
-<li><a href="https://github.com/ZDoom/gzdoom/releases">GZDoom</a>, newer (at least g4.8.0 is necessary for modern versions)</li>
-<li><a href="https://zandronum.com/">Zandronum</a> (at least 3.0 required).</li>
-<li><a href="https://qzandronum.com/">Q-Zandronum</a></li>
-<li>QZDoom (not a recommended user engine since it is mostly experimental developer tests)
-<ul>
-<li><a href="https://zdoom.org/files/qzdoom/bin/">older</a> (no <span style="font-style:italic;font-weight:bold">later</span> than 2.0.0)</li>
-<li><a href="https://devbuilds.drdteam.org/qzdoom/">newer</a> (at least g4.5pre-959)</li>
-</ul>
-</li>
-</ul>
-<p class="paragraph0">If you prefer using ODAMEX/ZDaemon as your engine of choice, you'll need to get the version of Chex&#8482; Quest 3 specifically for them, chex3odx.wad.</p>
-</div>
-<div class="main">
-<p class="paragraph0"><a id="Multiplayer_Support">MULTIPLAYER SUPPORT</a></p>
-<p class="paragraph0">While Chex&#8482; Quest 3 supports peer-to-peer multiplayer with the included engine (chex3gzd.exe), it would be much easier to use a custom engine that works with public servers listed on dedicated hosting. <a href="https://zandronum.com/">Zandronum</a> is required for chex3gzd.ipk3. You can use <a href="http://doomseeker.drdteam.org/">Doomseeker</a> combined with Zandronum, and use the former to search for a server that's already been setup. The Zandronum Wiki has a <a href="https://wiki.zandronum.com/Doomseeker">guide for setting up Doomseeker</a>. To find Chex&#8482; Quest servers, go to the Doomseeker toolbar, select View>Server Filter, and put "Chex" into the WADs text bar (make sure "chex" appears in the IWAD column in case it's a false positive!). There are always 24/7 Chex servers up with various options and modifications, so you're bound to find something you like! If the server you want is empty, you can wait in it until someone else connects.</p>
-<p class="paragraph0">(Note that the above intructions also work with <a href="https://qzandronum.com/">Q-Zandronum</a>, but that engine almost never has public Chex servers available.)</p>
-<p class="paragraph0">If you're feeling adventurous, the Zandronum Wiki also has a <a href="https://wiki.zandronum.com/Creating_a_Game_Server">guide for setting up your own server</a> on your own PC. Keep in mind that if you use wireless cellular internet (like <a href="https://www.reddit.com/r/verizon/comments/62iz3b/verizon_jetpack_with_ps4_nat_issue/">mobile hotspots</a>), you <a href="https://web.archive.org/web/20181025133457/https://community.verizonwireless.com/thread/821664">won't be able to do this</a> due to <a href="https://web.archive.org/web/20181025133440/https://community.verizonwireless.com/thread/938358">your ISP NATing the ports</a> and (for now) <a href="https://zandronum.com/tracker/view.php?id=214">a lack of IPv6 support in Zandronum</a>. I.e., you may specify and even forward port 10667, but your mobile hotspot and ISP could NAT your incoming port to 3896 or any other seemingly arbitrary number (this limitation doesn't affect your ability to connect to other servers, only to host, so you're good to play either way).</p>
-</div>
-<div class="main">
-<p class="paragraph0"><a id="Trademark">TRADEMARK</a></p>
-<p class="paragraph0">Chex&#8482; and Chex Quest&#8482; are trademarks of General Mills, Inc. Chex Quest 3 (game data files, e.g. IPK3, PK3, WAD) cannot be bought or sold under any circumstances. No endorsement from General Mills of this website is implied.</p>
-</div>
-<div class="floatright"><a class="button0" onclick="topFunction()">back to top</a></div><div class="icons"><a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"/></a><div class="poison"><a href="http://english-1511321456.spampoison.com"><img alt="email" src="../images/sticker.gif"/></a><br/><a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="../images/sticker.gif"/></a></div></div>
-<script src="../backtotop.js"></script>
-<div class="clear"></div>
-</div>
-</div>
+	<div class="bar1"></div>
+	<div class="div0">
+		<img alt="Chex&trade; Quest 3" class="mdoom" src="../images/M_DOOM.png"><br>
+		<a class="button0" href="../">home</a><br>
+		<a class="button0" href="../downloads/">downloads</a><br>
+		<a class="button0" href="../mods/">mods</a><br>
+		<a class="button0" href="../links/">links</a><br>
+		<a class="button1" href="./">about</a><br>
+		<a class="button0" href="../contact/">contact</a>
+		<div class="floatright">
+			<div class="bar2"></div>
+		</div>
+	</div>
+	<div class="floatright">
+		<div class="bar3"></div>
+	</div>
+	<div class="div1">
+		<div class="main">
+			<p class="paragraph0">
+				<a href="#If_chex3gzd.exe_doesnt_work...">IF chex3gzd.exe DOESN'T WORK...</a>,
+				<a href="#Multiplayer_Support">MULTIPLAYER SUPPORT</a>,
+				<a href="#Trademark">TRADEMARK</a>
+			</p>
+		</div>
+		<div class="main" id="maindiv">
+			<p class="title">About</p>
+			<p class="paragraph0">Chex&trade; Quest 3 is a classically-designed, fast-paced first person shooter (FPS) in the vein of popular ones from the 1990s. What sets it apart from the rest, though, is that it's totally non-violent. There's no blood, since the enemies are slime monsters called Flemoids, and they're "teleported" to another dimension rather than killed. Players do this using "zorchers" that look like remote controls rather than rifles &#8212; a true action-packed FPS for the whole family.</p>
+			<p class="paragraph0">After originally releasing with five levels in 1996 and getting five more levels a short while later in 1997, Chex&trade; Quest 3 was released in 2008, adding five more levels for a three-episode set. Now we're presenting the same game you know and love, but in a new package with new features, bug fixes, improvements galore, and new surprises in nearly every level! And, of course, CD movie playback!</p>
+			<p class="paragraph0">
+				The original 1996 games were made by Digital Caf&#233;, including Charles Jacobi, lead game artist (see 
+				<!--https://www.w3schools.com/jsref/obj_mouseevent.asp-->
+				<span class="tooltip" id="underlined" onclick="clicky()" onmouseenter="hoverenter()" onmouseleave="hoverleave()">here
+					<span class="tooltiptext" id="tools">
+						<span style="font-weight:700">Digital Caf&#233;</span><br>
+						<br>
+						Dean Lincoln Hyers, Michael Koenigs, Mary Bregi, Charles Jacobi, Josh Storms, David Brus, Scott Holman, Joel Koenigs, Andrew Benson<br>
+						<br>
+						<span style="font-weight:700">Waters Molitor</span><br>
+						<br>
+						Todd Waters, Tom Gunderson<br>
+						<br>
+						<span style="font-weight:700">Virtual Communications</span><br>
+						<br>
+						Dan Snyder, Lee Snyder
+					</span>
+				</span>
+				<script src="tooltipDisplay.js"></script>
+				for a more complete list of credits). The 2008 sequel was made by Charles Jacobi with select fan input. The 2023 Chex&trade; Quest 3 v2.0 features and bug update, along with the ODAMEX and ZDaemon port, was performed by "Acts 19 quiz", one of the developers of Chex Quest HD and designer of this website. This CQ3 update was done as interest in an updated game that included cinematic playback was officially considered; and the opportunity was taken to fix a number of bugs, make several improvements, and add more features at the same time.
+			</p>
+			<p class="paragraph0">The movie playback of the XP/32-bit branch (chex3gzd-xp) was done with the assistance of Erick194 and Gerardo194 of Team [GEC].</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0"><a id="If_chex3gzd.exe_doesnt_work...">IF chex3gzd.exe DOESN'T WORK...</a></p>
+			<p class="paragraph0">If chex3gzd.exe doesn't work on your computer, don't worry! There is a special branch designed specifically for older PCs, including Windows XP, 32-bit PCs, and if you're handy with compiling from souce, even older Linux and Macintosh! The chex3gzd-xp branch will be available along with the primary version upon initial release.</p>
+			<p class="paragraph0">For help compiling Chex 3 GZD from source, please visit the <a href="https://zdoom.org/wiki/">ZDoom wiki</a> and see the "Programmer's Corner" on the bottom-right corner of the page to build for your platform.</p>
+			<p class="paragraph0">If that doesn't work, you can still use chex3gzd.ipk3 with another engine. Compatible engines include (and aren't limited to):</p>
+			<ul>
+				<li>original <a href="https://zdoom.org/files/zdoom/">ZDoom</a> (as old as 2.8.0)</li>
+				<li><a href="https://github.com/drfrag666/gzdoom/releases/tag/3.88b">LZDoom</a> (3.88b required)</li>
+				<li><a href="https://zdoom.org/files/gzdoom/bin/">GZDoom</a>, older (as old as 1.7.0, though g2.3.0-2.4.0 provide the best legacy version experience; any after g3.1.0 but before g4.8.0 are incompatible)</li>
+				<li><a href="https://github.com/ZDoom/gzdoom/releases">GZDoom</a>, newer (at least g4.8.0 is necessary for modern versions)</li>
+				<li><a href="https://zandronum.com/">Zandronum</a> (at least 3.0 required)</li>
+				<li><a href="https://qzandronum.com/">Q-Zandronum</a></li>
+				<li>QZDoom (not a recommended user engine since it is mostly experimental developer tests)
+					<ul>
+						<li><a href="https://zdoom.org/files/qzdoom/bin/">older</a> (no <span style="font-style:italic;font-weight:bold">later</span> than 2.0.0)</li>
+						<li><a href="https://devbuilds.drdteam.org/qzdoom/">newer</a> (at least g4.5pre-959)</li>
+					</ul>
+				</li>
+			</ul>
+			<p class="paragraph0">If you prefer using ODAMEX/ZDaemon as your engine of choice, you'll need to get the version of Chex&trade; Quest 3 specifically for them, chex3odx.wad.</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0"><a id="Multiplayer_Support">MULTIPLAYER SUPPORT</a></p>
+			<p class="paragraph0">While Chex&trade; Quest 3 supports peer-to-peer multiplayer with the included engine (chex3gzd.exe), it would be much easier to use a custom engine that works with public servers listed on dedicated hosting. <a href="https://zandronum.com/">Zandronum</a> is required for chex3gzd.ipk3. You can use <a href="http://doomseeker.drdteam.org/">Doomseeker</a> combined with Zandronum, and use the former to search for a server that's already been setup. The Zandronum Wiki has a <a href="https://wiki.zandronum.com/Doomseeker">guide for setting up Doomseeker</a>. To find Chex&trade; Quest servers, go to the Doomseeker toolbar, select View>Server Filter, and put "Chex" into the WADs text bar (make sure "chex" appears in the IWAD column in case it's a false positive!). There are always 24/7 Chex servers up with various options and modifications, so you're bound to find something you like! If the server you want is empty, you can wait in it until someone else connects.</p>
+			<p class="paragraph0">(Note that the above intructions also work with <a href="https://qzandronum.com/">Q-Zandronum</a>, but that engine almost never has public Chex servers available.)</p>
+			<p class="paragraph0">If you're feeling adventurous, the Zandronum Wiki also has a <a href="https://wiki.zandronum.com/Creating_a_Game_Server">guide for setting up your own server</a> on your own PC. Keep in mind that if you use wireless cellular internet (like <a href="https://www.reddit.com/r/verizon/comments/62iz3b/verizon_jetpack_with_ps4_nat_issue/">mobile hotspots</a>), you <a href="https://web.archive.org/web/20181025133457/https://community.verizonwireless.com/thread/821664">won't be able to do this</a> due to <a href="https://web.archive.org/web/20181025133440/https://community.verizonwireless.com/thread/938358">your ISP NATing the ports</a> and (for now) <a href="https://zandronum.com/tracker/view.php?id=214">a lack of IPv6 support in Zandronum</a>. I.e., you may specify and even forward port 10667, but your mobile hotspot and ISP could NAT your incoming port to 3896 or any other seemingly arbitrary number (this limitation doesn't affect your ability to connect to other servers, only to host, so you're good to play either way).</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0"><a id="Trademark">TRADEMARK</a></p>
+			<p class="paragraph0">Chex&trade; and Chex Quest&trade; are trademarks of General Mills, Inc. Chex Quest 3 (game data files, e.g. IPK3, PK3, WAD) cannot be bought or sold under any circumstances. No endorsement from General Mills of this website is implied.</p>
+		</div>
+		<div class="floatright">
+			<a class="button0" onclick="topFunction()">back to top</a>
+		</div>
+		<div class="icons">
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"></a>
+			<div class="poison">
+				<a href="http://english-1511321456.spampoison.com"><img alt="email" src="../images/sticker.gif"></a><br>
+				<a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="../images/sticker.gif"></a>
+			</div>
+		</div>
+		<script src="../backtotop.js"></script>
+		<div class="clear"></div>
+	</div>
+</div><!--fixedwidth end div-->
 </body>
 </html>
