--- a/index.html
+++ b/index.html
@@ -1,62 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<meta name="description" content="The homepage of Chex&#8482; Quest 3."/>
-<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch"/>
-<title>Chex&#8482; Quest 3 | Home</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta name="description" content="The homepage of Chex&trade; Quest 3.">
+<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch">
+<title>Chex&trade; Quest 3 | Home</title>
 </head>
 <body>
 <div class="fixedwidth">
-<div class="bar1">
-</div>
-<div class="div0">
-<img alt="Chex&#8482; Quest 3" class="mdoom" src="images/M_DOOM.png"/>
-<br/>
-<a class="button1" href="./">home</a>
-<br/>
-<a class="button0" href="downloads/">downloads</a>
-<br/>
-<a class="button0" href="mods/">mods</a>
-<br/>
-<a class="button0" href="links/">links</a>
-<br/>
-<a class="button0" href="about/">about</a>
-<br/>
-<a class="button0" href="contact/">contact</a>
-<div class="floatright">
-<div class="bar2">
-</div>
-</div>
-</div>
-<div class="floatright">
-<div class="bar3">
-</div>
-</div>
-<div class="div1">
-<div class="logocontain"><div class="logo1"><div class="logo2"><img alt="Chex&#8482; Quest 3" class="logo" src="images/logo.png"/><!--<p class="title">Looking to get into the action and grab Chex&#8482; Quest 3 v2 right away? <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">Click here</a>!</p>--></div></div></div>
-<div class="clear"></div>
-<div class="main">
-<p class="title">Home</p>
-<p class="paragraph0">Welcome to the homepage for Chex&#8482; Quest 3 and its engine, Chex&#8482; 3 GZD! Here you can find relevant links, downloads, and even featured game mods like competitive multiplayer add-on levels. Check below for the latest news and updates.</p>
-</div>
-<div class="main">
-<p class="paragraph0">THU, JUN 22, 2023</p>
-<p class="paragraph0">A date for the public test can now be announced! Saturday, June 24, 2023 at 8:00 PM EDT, a test intended for the Chex Quest fan community will be conducted. It will be performed on the Zandronum source port. For more information on how to use it, <a href="about/#Multiplayer_Support">visit here</a>. You will be looking for a server with a name like, "&lt;[IFOC] Server&gt; Chex Quest 3 v2.0 Test". The IWAD will be "chex3gzd-rc4.ipk3".</p>
-<p class="paragraph0">The reasons for this test are for the Chex Quest fan community to experience the changes and new features, offer input, make suggestions, and find and report on any bugs. Fan input will be invaluable in determining where to go forward with Chex Quest 3 v2.0.</p>
-<p class="paragraph0">The pre-release test WADs needed to play will be made available at the start of the test. Configured correctly, Doomseeker, IDE, or your server browser of choice should automatically know where to look to find the WADs. They will also be made available here soon thereafter.</p>
-</div>
-<div class="main">
-<p class="paragraph0">TUE, JUN 6, 2023</p>
-<p class="paragraph0">www.chexquest3.com is now live with its first post! This is to announce the pending release of Chex Quest 3 v2, which includes extra features like original CD movie playback, dynamic lights, several bug fixes, and other updates. Details can be found in the <a href="downloads/">Downloads</a> section.</p>
-<p class="paragraph0">We are currently in the process of getting the initial announcement out, as well as scheduling an online multiplayer test session for fans of Chex Quest or anyone else interested. Once that is done and ready, a pre-release download will be made available. So stay tuned!</p>
-</div>
-<div class="floatright"><a class="button0" onclick="topFunction()">back to top</a></div><div class="icons"><a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"/></a><div class="poison"><a href="http://english-1511321456.spampoison.com"><img alt="email" src="images/sticker.gif"/></a><br/><a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="images/sticker.gif"/></a></div></div>
-<script src="backtotop.js"></script>
-<div class="clear"></div>
-</div>
-</div>
+	<div class="bar1"></div>
+	<div class="div0">
+		<img alt="Chex&trade; Quest 3" class="mdoom" src="images/M_DOOM.png"><br>
+		<a class="button1" href="./">home</a><br>
+		<a class="button0" href="downloads/">downloads</a><br>
+		<a class="button0" href="mods/">mods</a><br>
+		<a class="button0" href="links/">links</a><br>
+		<a class="button0" href="about/">about</a><br>
+		<a class="button0" href="contact/">contact</a>
+		<div class="floatright">
+			<div class="bar2"></div>
+		</div>
+	</div>
+	<div class="floatright">
+		<div class="bar3"></div>
+	</div>
+	<div class="div1">
+		<div class="logocontain">
+			<div class="logo1">
+				<div class="logo2">
+					<img alt="Chex&trade; Quest 3" class="logo" src="images/logo.png">
+					<!--<p class="title">Check out the pre-release testing version of Chex&trade; Quest 3 v2 <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">here</a>!--><!--<p class="title">Looking to get into the action and grab Chex&trade; Quest 3 v2 right away? <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">Click here</a>!</p>-->
+				</div>
+			</div>
+		</div>
+		<div class="clear"></div>
+		<div class="main">
+			<p class="title">Home</p>
+			<p class="paragraph0">Welcome to the homepage for Chex&trade; Quest 3 and its engine, Chex&trade; 3 GZD! Here you can find relevant links, downloads, and even featured game mods like competitive multiplayer add-on levels. Check below for the latest news and updates.</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0">SAT, MAR 2, 2024</p>
+			<p class="paragraph0">Mark your calendars: A public multiplayer co-op online test of the Odamex/ZDaemon port of Chex&trade; Quest 3 is now scheduled! It will take place on Saturday, March 16, 2024. The time will be 6 PM PST, 9 PM EST, 2 AM (SUN) London.</p>
+			<p class="paragraph0">What you'll need: The Odamex DOOM source port. You can get it at <a href="https://odamex.net/">odamex.net</a> (it's compatible with Windows, Mac, and Linux). Odamex comes with its own server browser, odalaunch.exe, to find online game servers. You'll also need the original <a href="downloads/#Chex_Quest_1_(chex.wad)">Chex&reg; Quest 1 (chex.wad)</a>. Odamex should automatically download and load them when you join the server.</p>
+			<p class="paragraph0">This will be a casual, sight-seeing playthrough of all levels to give players time to experience and examine everything. The difficulty will be "Extreme Ooze!" with unlimited lives. The expected play time of all fifteen levels is around two hours, give or take.</p>
+			<p class="paragraph0">While I won't be playing the game, I will be in the Odamex Discord server, streaming the action, offering dev commentary, and fielding any questions people might have. Feel free to join the Odamex community and view the stream! <a href="https://discord.gg/3mKEnjx5P9">https://discord.gg/3mKEnjx5P9</a></p>
+			<p class="paragraph0">Get a sneak peak of the action <a href="http://youtu.be/LWSOH_Bs0dw">in this video</a>!
+			<p class="paragraph0">When the test is done, all of the test WADs (for both the primary and Odamex/ZDaemon versions) will be uploaded here. The next step will then be a planning stage within the Chex Quest community to determine what (if anything) needs to be fixed, and how to proceed forward to finalizing alternations to make things ready for prime time.</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0">THU, JUN 22, 2023</p>
+			<p class="paragraph0">A date for the public test can now be announced! Saturday, June 24, 2023 at 8:00 PM EDT, a test intended for the Chex Quest fan community will be conducted. It will be performed on the Zandronum source port. For more information on how to use it, <a href="about/#Multiplayer_Support">visit here</a>. You will be looking for a server with a name like, "&lt;[IFOC] Server&gt; Chex Quest 3 v2.0 Test". The IWAD will be "chex3gzd-rc4.ipk3".</p>
+			<p class="paragraph0">The reasons for this test are for the Chex Quest fan community to experience the changes and new features, offer input, make suggestions, and find and report on any bugs. Fan input will be invaluable in determining where to go forward with Chex Quest 3 v2.0.</p>
+			<p class="paragraph0">The pre-release test WADs needed to play will be made available at the start of the test. Configured correctly, Doomseeker, IDE, or your server browser of choice should automatically know where to look to find the WADs. They will also be made available here soon thereafter.</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0">TUE, JUN 6, 2023</p>
+			<p class="paragraph0">www.chexquest3.com is now live with its first post! This is to announce the pending release of Chex Quest 3 v2, which includes extra features like original CD movie playback, dynamic lights, several bug fixes, and other updates. Details can be found in the <a href="downloads/">Downloads</a> section.</p>
+			<p class="paragraph0">We are currently in the process of getting the initial announcement out, as well as scheduling an online multiplayer test session for fans of Chex Quest or anyone else interested. Once that is done and ready, a pre-release download will be made available. So stay tuned!</p>
+		</div>
+		<div class="floatright">
+			<a class="button0" onclick="topFunction()">back to top</a>
+		</div>
+		<div class="icons">
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"></a>
+			<div class="poison">
+				<a href="http://english-1511321456.spampoison.com"><img alt="email" src="images/sticker.gif"></a><br>
+				<a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="images/sticker.gif"></a>
+			</div>
+		</div>
+		<script src="backtotop.js"></script>
+		<div class="clear"></div>
+	</div>
+</div><!--fixedwidth end div-->
 </body>
 </html>
