--- a/mods/index.html
+++ b/mods/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<meta name="description" content="The homepage of Chex&#8482; Quest 3."/>
-<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch"/>
-<title>Chex&#8482; Quest 3 | Mods</title>
+<link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="../stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta name="description" content="The homepage of Chex&trade; Quest 3.">
+<meta name="keywords" content="1,2,3,Cafe,Caf&#233;,Chex 2,Chex 3 GZD,Chex 3,Chex Quest 2,Chex Quest 3 GZD,Chex Quest 3,Chex Quest,Chex,Digital Cafe,Digital Caf&#233;,Digital,download,downloads,GZDoom,IPK3,IPK3s,links,mod,modification,modifications,mods,ODAMEX,Quest,WAD,WADs,Zandronum,ZDaemon,ZDoom,Zorchmatch">
+<title>Chex&trade; Quest 3 | Mods</title>
 </head>
 <body>
 <div class="fixedwidth">
-<div class="bar1">
-</div>
-<div class="div0">
-<img alt="Chex&#8482; Quest 3" class="mdoom" src="../images/M_DOOM.png"/>
-<br/>
-<a class="button0" href="../">home</a>
-<br/>
-<a class="button0" href="../downloads/">downloads</a>
-<br/>
-<a class="button1" href="./">mods</a>
-<br/>
-<a class="button0" href="../links/">links</a>
-<br/>
-<a class="button0" href="../about/">about</a>
-<br/>
-<a class="button0" href="../contact/">contact</a>
-<div class="floatright">
-<div class="bar2">
-</div>
-</div>
-</div>
-<div class="floatright">
-<div class="bar3">
-</div>
-</div>
-<div class="div1">
-<div class="main">
-<p class="title">Mods</p>
-<p class="paragraph0">Here are some featured mods that were designed to feel, look and play like the original levels. These are community-made mods that have been ported over by "Acts 19 quiz" to Chex&#8482; Quest 3 from their original platforms.</p>
-</div>
-<div class="main">
-<p class="paragraph0">COMING SOON!</p>
-<div class="clear"></div>
-</div>
-</div>
+	<div class="bar1"></div>
+	<div class="div0">
+		<img alt="Chex&trade; Quest 3" class="mdoom" src="../images/M_DOOM.png"><br>
+		<a class="button0" href="../">home</a><br>
+		<a class="button0" href="../downloads/">downloads</a><br>
+		<a class="button1" href="./">mods</a><br>
+		<a class="button0" href="../links/">links</a><br>
+		<a class="button0" href="../about/">about</a><br>
+		<a class="button0" href="../contact/">contact</a>
+		<div class="floatright">
+			<div class="bar2"></div>
+		</div>
+	</div>
+	<div class="floatright">
+		<div class="bar3"></div>
+	</div>
+	<div class="div1">
+		<div class="main">
+			<p class="title">Mods</p>
+			<p class="paragraph0">Here are some featured mods that were designed to feel, look and play like the original levels. These are community-made mods that have been ported over by "Acts 19 quiz" to Chex&trade; Quest 3 from their original platforms.</p>
+		</div>
+		<div class="main">
+			<p class="paragraph0">COMING SOON!</p>
+		</div>
+		<div class="floatright">
+			<a class="button0" onclick="topFunction()">back to top</a>
+		</div>
+		<div class="icons">
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="Valid CSS!" class="verified" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"></a>
+			<div class="poison">
+				<a href="http://english-1511321456.spampoison.com"><img alt="email" src="../images/sticker.gif"></a><br>
+				<a href="http://japanese-1511323859.spampoison.com"><img alt="email" src="../images/sticker.gif"></a>
+			</div>
+		</div>
+		<script src="../backtotop.js"></script>
+		<div class="clear"></div>
+	</div>
+</div><!--fixedwidth end div-->
 </body>
 </html>
