Bolden the date news text.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</div>
 				<br>
 			</div>
-			<p class="paragraph0">Mark your calendars: A public multiplayer co-op online test of the Odamex/ZDaemon port of Chex&trade; Quest 3 is now scheduled! It will take place on Saturday, March 16, 2024. The time will be 6 PM PST, 9 PM EST, 2 AM (SUN) London.</p>
+			<p class="paragraph0">Mark your calendars: A public multiplayer co-op online test of the Odamex/ZDaemon port of Chex&trade; Quest 3 is now scheduled! It will take place on <span style="font-weight:900">Saturday, March 16, 2024</span>. The time will be <span style="font-weight:900">6 PM PST, 9 PM EST, 2 AM (SUN) London</span>.</p>
 			<p class="paragraph0">What you'll need: The Odamex DOOM source port. You can get it at <a href="https://odamex.net/">odamex.net</a> (it's compatible with Windows, Mac, and Linux). Odamex comes with its own server browser, odalaunch.exe, to find online game servers. You'll also need the original <a href="downloads/#Chex_Quest_1_(chex.wad)">Chex&reg; Quest 1 (chex.wad)</a>. Odamex should automatically download and load them when you join the server.</p>
 			<p class="paragraph0">This will be a casual, sight-seeing playthrough of all levels to give players time to experience and examine everything. The difficulty will be "Extreme Ooze!" with unlimited lives. The expected play time of all fifteen levels is around two hours, give or take.</p>
 			<p class="paragraph0">While I won't be playing the game, I will be in the Odamex Discord server, streaming the action, offering dev commentary, and fielding any questions people might have. Feel free to join the Odamex community and view the stream! <a href="https://discord.gg/3mKEnjx5P9">https://discord.gg/3mKEnjx5P9</a></p>
