--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="main">
 			<p class="paragraph0">SAT, MAR 16, 2023</p>
-			<p class="paragraph0">The test server will be live soon at the scheduled time (6 PM Pacific, 9 PM Eastern, 2 AM London). You will be looking in OdaLaunch (included with <a href="https://odamex.net/">Odamex</a>; alternatively, you can use <a href="https://doomseeker.drdteam.org/">Doomseeker</a>) for the server name "<span style="font-weight:900">&lt;[IFOC] Server&rt; Chex Quest 3 v2 Co-op Test (Extreme Ooze)</span>". The address to connect to is <span style="font-weight:900">192.155.90.89:10694</span>.</p>
+			<p class="paragraph0">The test server will be live soon at the scheduled time (6 PM Pacific, 9 PM Eastern, 2 AM London). You will be looking in OdaLaunch (included with <a href="https://odamex.net/">Odamex</a>; alternatively, you can use <a href="https://doomseeker.drdteam.org/">Doomseeker</a>) for the server name "<span style="font-weight:900">&lt;[IFOC] Server&rt; Chex Quest 3 v2 Co-op Test (Extreme Ooze)</span>". The address to connect to will be <span style="font-weight:900">192.155.90.89:10694</span>.</p>
 		</div>
 		<div class="main">
 			<p class="paragraph0">SAT, MAR 2, 2024</p>
