Make available pre-release downloads; correct wrong year in News.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -88,9 +88,10 @@
 			<div class="clear"></div>
 			<p class="paragraph0">&#192; la carte downloads</p>
 			<p class="paragraph0">
-				chex3gzd-rc4.ipk3 (soon!)<br>
-				cq3gldef.pk3 (soon!)<br>
-				cq3skins.wad (soon!)<br>
+				<a href="chex3gzd-rc5.zip">chex3gzd-rc5.ipk3 (pre-release, not final)</a> 8.37 MB<br>
+				<a href="cq3gzd_help.zip">cq3gzd.chm (pre-release, not final)</a> 2.83 MB<br>
+				<a href="cq3gldef.zip">cq3gldef.pk3 (pre-relase, not final</a> 144 KB<br>
+				<a href="cq3skins.zip">cq3skins.wad (pre-release, not final)</a> 112 KB<br>
 				cq3smk.pk3 (soon!) (the CD movies, compatible with GZDoom g4.8.0 and later)
 			</p>
 			<hr>
@@ -107,7 +108,7 @@
 			<p class="paragraph0">Existing Chex&trade; Quest 3 mods will also probably not be compatible with this port, though a layer of cross-compatibility was designed in the infrastructure so you can make something like a level pack with the base monsters, and it can be compatible with both the primary CQ3 as well as the ODAMEX/ZDaemon version. All <a href="https://zdoom.org/wiki/Standard_editor_numbers">standard editor numbers</a> are identical, and all patches, textures and flats carry over, which make this possible.</p>
 			<p class="paragraph0">chex3odx.wad is cross-compatible with both source ports &#8212; one WAD for both.</p>
 			<hr>
-			<p class="paragraph0">chex3odx.wad (soon!)</p>
+			<p class="paragraph0"><a href="chex3odx-rc4.zip">cq3odx-rc4.wad (pre-release, not final)</a> 112 KB</p>
 		</div>
 		<div class="main">
 			<p class="paragraph0"><a id="Archived_Chex_Quest_3_Versions">ARCHIVED CHEX&trade; QUEST 3 VERSIONS</a></p>
