--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
 			<p class="paragraph0">Welcome to the homepage for Chex&trade; Quest 3 and its engine, Chex&trade; 3 GZD! Here you can find relevant links, downloads, and even featured game mods like competitive multiplayer add-on levels. Check below for the latest news and updates.</p>
 		</div>
 		<div class="main">
-			<p class="paragraph0">SAT, MAR 16, 2023</p>
+			<p class="paragraph0">TUE, APR 2, 2024</p>
+			<p class="paragraph0">To make up for the delay, &#225; la carte pre-release testing downloads of Chex Quest 3 v2 are now in the Downloads section for public testing and examination. Keep in mind that these are not final. They're still under examination for bugs and other issues. Being subject to further revision, they're also not yet suitable for developing mods for, since those new mods may be rendered incompatible upon final release of CQ3 v2.</p>
+			<p class="paragraph0">However, if you're looking to see what all the hubbub is about or to check out the fixes, improvements, and changes, feel free to check them out <a href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">here</a>! This includes the primary game, and the add-on packs for dynamic lights and skins. The dynamic lights are primarily constructed with Chex Quest 3 v2.0 in mind, and are compatible with GZDoom, LZDoom, Q-Zandronum, and Zandronum (among others). However, if you're playing on modern versions of GZDoom and LZDoom, you can also test them out on Chex Quest 3 v1 (chex3.wad), and even Chex Quest 1 (chex.wad).</p>
+			<p class="paragraph0">The pre-release version of the Odamex/ZDaemon version of Chex Quest 3 v2 is also available. Check it out <a href="downloads/#ODAMEXZDaemon_Chex_Quest_3_Port">here!</a></p>
+		</div>
+		<div class="main">
+			<p class="paragraph0">SAT, MAR 16, 2024</p>
 			<p class="paragraph0">The test server will be live soon at the scheduled time (6 PM Pacific, 9 PM Eastern, 2 AM London). You will be looking in OdaLaunch (included with <a href="https://odamex.net/">Odamex</a>; alternatively, you can use <a href="https://doomseeker.drdteam.org/">Doomseeker</a>) for the server name "<span style="font-weight:900">&lt;[IFOC] Server&rt; Chex Quest 3 v2 Co-op Test (Extreme Ooze)</span>". The address to connect to will be <span style="font-weight:900">192.155.90.89:10694</span>.</p>
 		</div>
 		<div class="main">
