Unfurl new banner

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="logo1">
 				<div class="logo2">
 					<img alt="Chex&trade; Quest 3" class="logo" src="images/logo.png">
-					<!--<p class="title">Check out the pre-release testing version of Chex&trade; Quest 3 v2 <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">here</a>!--><!--<p class="title">Looking to get into the action and grab Chex&trade; Quest 3 v2 right away? <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">Click here</a>!</p>-->
+					<p class="title">Check out the pre-release testing version of Chex&trade; Quest 3 v2 <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">here</a><!--<p class="title">Looking to get into the action and grab Chex&trade; Quest 3 v2 right away? <a class="logo" href="downloads/#Chex_Quest_3_v2_(primary_recommended_download!)">Click here</a>!</p>-->
 				</div>
 			</div>
 		</div>
