Fix broken CHM download

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -89,7 +89,7 @@
 			<p class="paragraph0">&#192; la carte downloads</p>
 			<p class="paragraph0">
 				<a href="chex3gzd-rc5.zip">chex3gzd-rc5.ipk3 (pre-release, not final)</a> 8.37 MB<br>
-				<a href="cq3gzd_help.zip">cq3gzd.chm (pre-release, not final)</a> 2.83 MB<br>
+				<a href="chex3gzd_help.zip">chex3gzd.chm (pre-release, not final)</a> 2.83 MB<br>
 				<a href="cq3gldef.zip">cq3gldef.pk3 (pre-relase, not final</a> 144 KB<br>
 				<a href="cq3skins.zip">cq3skins.wad (pre-release, not final)</a> 112 KB<br>
 				cq3smk.pk3 (soon!) (the CD movies, compatible with GZDoom g4.8.0 and later)
