Add all known chex3.wad versions; make sections more readable my increasing the margins.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -112,18 +112,45 @@
 		</div>
 		<div class="main">
 			<p class="paragraph0"><a id="Archived_Chex_Quest_3_Versions">ARCHIVED CHEX&trade; QUEST 3 VERSIONS</a></p>
-			<p class="paragraph0">Although these versions are now deprecated, they're being preserved here for posterity's sake.</p>
+			<p class="paragraph0">Although these versions are now deprecated, they're being preserved here for posterity's sake. Thanks to "xbolt" for archiving these.</p>
 			<hr>
-			<p class="paragraph0"><a href="ChexQuest3_v1.1.zip">ChexQuest3_v1.1.zip (NOV 12, 2008)</a> 7.88 MB</p>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.0.zip">ChexQuest3_v1.0.0.zip (SEP 6, 2008)</a> 7.49 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg32892#msg32892">SEP 6, 2008</li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.1.zip">ChexQuest3_v1.0.1.zip (SEP 11, 2008)</a> 7.51 MB</p>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.2.zip">ChexQuest3_v1.0.2.zip (SEP 13, 2008)</a> 7.53 MB</p>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.3.zip">ChexQuest3_v1.0.3.zip (SEP 17, 2008)</a> 7.92 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg36685#msg36685">SEP 17, 2008</li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.4.zip">ChexQuest3_v1.0.4.zip (SEP 22, 2008)</a> 7.89 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg38326#msg38326">SEP 22, 2008</li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.0.5.zip">ChexQuest3_v1.0.5.zip (NOV 12, 2008)</a> 7.88 MB</p>
 			<ul>
 				<li><a href="https://www.moddb.com/games/chex-quest/downloads/chex-quest-3-official-release">Mirror | moddb.com (ChexQuest3.zip)</a></li>
 				<li>As posted on <a href="http://www.chexquest.org/index.php?topic=1820.msg49600#msg49600">NOV 12, 2008</a></li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.1.zip">ChexQuest3_v1.1.zip (APR 23, 2009)</a> 7.88 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg77434#msg77434">APR 23, 2008</li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.2.zip">ChexQuest3_v1.2.zip (MAY 3, 2009)</a> 7.96 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg78560#msg78560">MAY 3, 2009</li>
+			</ul>
+			<p class="paragraph0"><a href="ChexQuest3_v1.3.zip">ChexQuest3_v1.3.zip (JUN 13, 2009)</a> 8.19 MB</p>
+			<ul>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1664.msg86012#msg86012">JUN 13, 2009</li>
 			</ul>
 			<p class="paragraph0"><a href="ChexQuest3_v1.4.zip">ChexQuest3_v1.4.zip (JUN 25, 2009)</a> 8.66 MB</p>
 			<ul>
 				<li><a href="https://www.chexmix.com/chexquest3/">Mirror | chexmix.com (ChexQuest3.zip)</a></li>
 				<li><a href="http://www.chucktropolis.com/gamers.htm">Mirror | chucktropolis.com (ChexQuest3.zip)</a></li>
 				<li><a href="https://archive.org/details/ChexQuest3_1020">Mirror | archive.org (ChexQuest3.zip)</a></li>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1664.msg86012#msg86012">JUN 25, 2009</li>
 			</ul>
 			<p class="paragraph0"><a href="chex3_zdoom.zip">chex3_zdoom.zip (v1.4 source code)</a> 53.3 MB</p>
 		</div>
