Add https version of external link.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -131,7 +131,7 @@
 			<p class="paragraph0"><a href="ChexQuest3_v1.0.5.zip">ChexQuest3_v1.0.5.zip (NOV 12, 2008)</a> 7.88 MB</p>
 			<ul>
 				<li><a href="https://www.moddb.com/games/chex-quest/downloads/chex-quest-3-official-release">Mirror | moddb.com (ChexQuest3.zip)</a></li>
-				<li>As posted on <a href="http://www.chexquest.org/index.php?topic=1820.msg49600#msg49600">NOV 12, 2008</a></li>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1820.msg49600#msg49600">NOV 12, 2008</a></li>
 			</ul>
 			<p class="paragraph0"><a href="ChexQuest3_v1.1.zip">ChexQuest3_v1.1.zip (APR 23, 2009)</a> 7.88 MB</p>
 			<ul>
